--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -176,7 +176,7 @@ jobs:
     continueOnError: True
   # Define OT_DESTRUCTIVE=1 to enable ci/scripts/check-generated.sh to delete
   # uncommitted changes.
-  - bash: OT_DESTRUCTIVE=1 ci/scripts/check-generated.sh top_earlgrey
+  - bash: OT_DESTRUCTIVE=1 ci/scripts/check-generated.sh
     displayName: Check Generated
     # Ensure all generated files are clean and up-to-date
   - bash: ci/bazelisk.sh test //quality:buildifier_check --test_output=streamed
