[ci] Add arg with top name to `prepare-cached-bitstream.sh`
Signed-off-by: Andreas Kurth <adk@lowrisc.org>

--- a/ci/cw310-template.yml
+++ b/ci/cw310-template.yml
@@ -17,7 +17,7 @@ steps:
 - bash: |
     set -ex
     module load "xilinx/vivado/$(VIVADO_VERSION)"
-    ci/scripts/prepare-cached-bitstream.sh
+    ci/scripts/prepare-cached-bitstream.sh ${{ parameters.top_name }}
   condition: eq(variables.bitstreamStrategy, 'cached')
   displayName: Splice cached bitstream
 - bash: |
