[ci] Disable caching of bitstreams
Until we have a separate GCP bucket to store bitstreams generated by
this repository (#157), we disable bitstream caching.  Once #157 is
resolved, this commit should be reverted and bitstreams for Darjeeling
should be cached (ideally also bitstreams for Earlgrey -- although not
functionally required by subsequent CI jobs, it will reduce CI load).

Signed-off-by: Andreas Kurth <adk@lowrisc.org>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -497,7 +497,7 @@ jobs:
   dependsOn:
     - chip_earlgrey_cw310
     - chip_earlgrey_cw310_hyperdebug
-  condition: eq(variables['Build.SourceBranchName'], 'master')
+  condition: false
   steps:
     - template: ci/download-artifacts-template.yml
       parameters:
