[ci] Change repo for releases to `opentitan-integrated`
Signed-off-by: Andreas Kurth <adk@lowrisc.org>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -659,7 +659,7 @@ jobs:
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     inputs:
       gitHubConnection: opentitan-release-upload
-      repositoryName: lowrisc/opentitan
+      repositoryName: lowrisc/opentitan-integrated
       addChangeLog: false
       assets: |
           $(Build.ArtifactStagingDirectory)/dist-final/*
