[darjeeling/dif] Restructure dif library to support multiple devices
Move dif directory into new structure
Separate device-specific difs into separate ip directories
Update bazel build files for new structure

Signed-off-by: Daniel Beitel <dbeitel@rivosinc.com>

--- a/sw/common/dif/BUILD
+++ b/sw/common/dif/BUILD
@@ -5,7 +5,7 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "dif_base",
+    name = "base",
     srcs = ["dif_base.c"],
     hdrs = ["dif_base.h"],
     deps = [
@@ -16,11 +16,11 @@ cc_library(
 )
 
 cc_library(
-    name = "dif_test_base",
+    name = "test_base",
     testonly = True,
     hdrs = ["dif_test_base.h"],
     deps = [
-        ":dif_base",
+        ":base",
         "@googletest//:gtest",
     ],
 )
