[bitstreams] Add rules to generate manifests
Add a rule to generate manifest fragments for individual fusesoc
bitstream builds. Use the output groups from the builds to collect the
bitstream and MMI files, in addition to their original build target,
then output a quasi-cache entry for the fragments.

To facilitate creation of fragments from full cache entries, add a
utility to extract a single design from a full manifest and output its
manifest fragment.

Add a utility to collect the fragments and generate a tarball suitable
for uploading to the cache storage.

Signed-off-by: Alexander Williams <awill@opentitan.org>

--- a/util/py/scripts/BUILD
+++ b/util/py/scripts/BUILD
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 load("@rules_python//python:defs.bzl", "py_binary")
+load("@ot_python_deps//:requirements.bzl", "requirement")
 
 py_binary(
     name = "object_size",
@@ -14,5 +15,23 @@ py_binary(
         "//util/py/packages/impl/object_size:types",
         "//util/py/packages/lib:bazel",
         "//util/py/packages/lib:ot_logging",
+    ],
+)
+
+py_binary(
+    name = "bitstream_cache_create",
+    srcs = ["bitstream_cache_create.py"],
+    visibility = ["//visibility:public"],
+    deps = [
+        requirement("jsonschema"),
+    ],
+)
+
+py_binary(
+    name = "bitstreams_fragment_from_manifest",
+    srcs = ["bitstreams_fragment_from_manifest.py"],
+    visibility = ["//visibility:public"],
+    deps = [
+        requirement("jsonschema"),
     ],
 )
