[darjeeling/sw/lib] Restructure device library for multiple devices
Move arch, base, crt, and runtime device libraries into new structure

Signed-off-by: Daniel Beitel <dbeitel@rivosinc.com>

--- a/sw/lib/sw/device/base/BUILD
+++ b/sw/lib/sw/device/base/BUILD
@@ -283,8 +283,8 @@ cc_library(
         ":bitfield",
         ":macros",
         "//sw/device/lib/base/internal:status",
+        "//sw/device/lib/dif:base",
         "//sw/device/silicon_creator/lib:error",
-        "//sw/ip/base/dif:base",
     ],
 )
 
