--- a/sw/lib/sw/device/runtime/BUILD
+++ b/sw/lib/sw/device/runtime/BUILD
@@ -92,8 +92,8 @@ cc_library(
         "//sw/device/lib/base:macros",
         "//sw/device/lib/base:memory",
         "//sw/device/lib/base:status",
-        "//sw/top_earlgrey/sw/dif:spi_device",
-        "//sw/top_earlgrey/sw/dif:uart",
+        "//sw/device/lib/dif:spi_device",
+        "//sw/device/lib/dif:uart",
     ],
 )
 
