--- a/sw/lib/sw/device/arch/BUILD
+++ b/sw/lib/sw/device/arch/BUILD
@@ -8,50 +8,6 @@ cc_library(
     name = "device",
     hdrs = ["device.h"],
     deps = [
-        "//hw/top_darjeeling/sw/autogen:top_darjeeling",
-        "//hw/top_earlgrey/sw/autogen:top_earlgrey",
-        "//sw/device/lib/base:macros",
-    ],
-)
-
-cc_library(
-    name = "fpga_cw305",
-    srcs = ["device_fpga_cw305.c"],
-    deps = [
-        ":device",
-        "//sw/device/lib/base:macros",
-        "//sw/device/silicon_creator/lib:rom_print",
-        "//sw/device/silicon_creator/lib/drivers:ibex",
-    ],
-)
-
-cc_library(
-    name = "fpga_cw310",
-    srcs = ["device_fpga_cw310.c"],
-    deps = [
-        ":device",
-        "//sw/device/lib/base:macros",
-        "//sw/device/silicon_creator/lib:rom_print",
-        "//sw/device/silicon_creator/lib/drivers:ibex",
-    ],
-)
-
-cc_library(
-    name = "sim_dv",
-    srcs = ["device_sim_dv.c"],
-    deps = [
-        ":device",
-        "//hw/ip/rv_core_ibex/data:rv_core_ibex_regs",
-        "//hw/top_earlgrey/sw/autogen:top_earlgrey",
-    ],
-)
-
-cc_library(
-    name = "sim_verilator",
-    srcs = ["device_sim_verilator.c"],
-    deps = [
-        ":device",
-        "//hw/ip/rv_core_ibex/data:rv_core_ibex_regs",
-        "//hw/top_earlgrey/sw/autogen:top_earlgrey",
+        "//sw/lib/sw/device/base:macros",
     ],
 )
