--- a/hw/top_darjeeling/bitstream/hyperdebug/BUILD
+++ b/hw/top_darjeeling/bitstream/hyperdebug/BUILD
@@ -5,6 +5,11 @@
 load("//rules:splice.bzl", "bitstream_splice")
 load("//rules:otp.bzl", "get_otp_images")
 load("//rules:const.bzl", "KEY_AUTHENTICITY")
+load(
+    "//rules:bitstreams_select.bzl",
+    "bitstream_cache_filter",
+    "bitstream_cache_or",
+)
 
 package(default_visibility = ["//visibility:public"])
 
@@ -41,9 +46,11 @@ filegroup(
     srcs = select({
         "//hw/top_darjeeling/bitstream:bitstream_skip": ["//hw/bitstream:skip"],
         "//hw/top_darjeeling/bitstream:bitstream_vivado": ["//hw/top_darjeeling/bitstream/vivado:rom_mmi"],
-        "//conditions:default": ["//hw/top_darjeeling/bitstream/vivado:rom_mmi"],
-        # TODO: Reenable when Darjeeling has bitstream cache
-        #        "//conditions:default": ["@bitstreams//:chip_darjeeling_cw310_hyperdebug_rom_mmi"],
+        "//conditions:default": bitstream_cache_or(
+            "chip_darjeeling_cw310_hyperdebug",
+            ["@bitstreams//:chip_darjeeling_cw310_hyperdebug_rom_mmi"],
+            ["//hw/top_darjeeling/bitstream/vivado:rom_mmi_hyp"],
+        ),
     }),
     tags = ["manual"],
 )
@@ -54,9 +61,11 @@ filegroup(
     srcs = select({
         "//hw/top_darjeeling/bitstream:bitstream_skip": ["//hw/bitstream:skip"],
         "//hw/top_darjeeling/bitstream:bitstream_vivado": ["//hw/top_darjeeling/bitstream/vivado:otp_mmi"],
-        "//conditions:default": ["//hw/top_darjeeling/bitstream/vivado:otp_mmi"],
-        # TODO: Reenable when Darjeeling has bitstream cache
-        #        "//conditions:default": ["@bitstreams//:chip_darjeeling_cw310_hyperdebug_otp_mmi"],
+        "//conditions:default": bitstream_cache_or(
+            "chip_darjeeling_cw310_hyperdebug",
+            ["@bitstreams//:chip_darjeeling_cw310_hyperdebug_rom_mmi"],
+            ["//hw/top_darjeeling/bitstream/vivado:rom_mmi_hyp"],
+        ),
     }),
     tags = ["manual"],
 )
@@ -81,9 +90,11 @@ filegroup(
 bitstream_splice(
     name = "gcp_spliced_test_rom",
     testonly = True,
-    # TODO: Reenable when Darjeeling has bitstream cache
-    #    src = "@bitstreams//:chip_darjeeling_cw310_hyperdebug_bitstream",
-    src = "//hw/top_darjeeling/bitstream/vivado:fpga_cw310_test_rom",
+    src = bitstream_cache_or(
+        "chip_darjeeling_cw310_hyperdebug",
+        "@bitstreams//:chip_darjeeling_cw310_hyperdebug_bitstream",
+        "//hw/top_darjeeling/bitstream/vivado:fpga_cw310_test_rom_hyp",
+    ),
     data = "//sw/device/lib/testing/test_rom:test_rom_fpga_cw310_scr_vmem",
     meminfo = ":rom_mmi",
     tags = ["manual"],
@@ -95,9 +106,11 @@ bitstream_splice(
     bitstream_splice(
         name = "gcp_spliced_rom_with_{}_keys".format(authenticity),
         testonly = True,
-        # TODO: Reenable when Darjeeling has bitstream cache
-        #        src = "@bitstreams//:chip_darjeeling_cw310_hyperdebug_bitstream",
-        src = "//hw/top_darjeeling/bitstream/vivado:fpga_cw310_test_rom",
+        src = bitstream_cache_or(
+            "chip_darjeeling_cw310_hyperdebug",
+            "@bitstreams//:chip_darjeeling_cw310_hyperdebug_bitstream",
+            "//hw/top_darjeeling/bitstream/vivado:fpga_cw310_test_rom_hyp",
+        ),
         data = "//sw/device/silicon_creator/rom:rom_with_{}_keys_fpga_cw310_scr_vmem".format(authenticity),
         meminfo = ":rom_mmi",
         tags = ["manual"],
